<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="left|center"
        android:background="@drawable/border_input"
        android:hint="@string/name_product"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:autofillHints=""
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/productType"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="left|center"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_input"
        android:hint="@string/type_product"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="text"
        tools:ignore="RtlHardcoded,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="left|center"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_input"
        android:hint="@string/price_product"
        android:padding="10dp"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        tools:ignore="RtlHardcoded,TextFields"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/btnOpenDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_input"
        android:weightSum="10">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:src="@drawable/icons_opened_folder"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/labelNameImgProduct"
            android:layout_width="0dp"
            android:layout_weight="8.5"
            android:layout_height="44dp"
            android:text="@string/choose_image_product"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>
